sfdx-source/force-app/main/default/objects/Lever__c/Lever__c.object-meta.xml
<CustomObject>
    <description>LEM-15226: The object will represent the Growth and Operational Levers which get created after reps choose and select from the raw recommendations.</description>
    <label>Lever</label>
    <nameField>
        <displayFormat>LVR-{0000}</displayFormat>
        <label>Lever Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Levers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>