sfdx-source/force-app/main/default/objects/Lever__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LEM-15226: It represents the Account linked to the Lever.</description>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This Lever should be associated to account of type Business. Please select Business Account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Levers</relationshipLabel>
    <relationshipName>Levers</relationshipName>
    <type>Lookup</type>
</CustomField>