sfdx-source/force-app/main/default/objects/Lever__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15222: It is used to store associated Account Plan.</description>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Levers</relationshipLabel>
    <relationshipName>Levers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>