sfdx-source/force-app/main/default/objects/Lever__c/fields/Adjusted_Incr_Sales_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Incr_Sales_Uplift__c</fullName>
    <description>LEM-17006: It will This field will display a number value. It will take the value from the “Incremental Sales Uplift $”, divide that number by the number of days in the quarter, and multiply by the number of days remaining in the quarter.</description>
    <formula>( Predicted_Incremental_Sales__c /(((IF(
MONTH(Today()) &lt; 4,
(ADDMONTHS(DATE( YEAR(Today()), 01, 01),3)-1),
IF(
MONTH(Today()) &lt; 7,
(ADDMONTHS(DATE( YEAR(Today()), 04, 01),3)-1),
IF(
MONTH(Today()) &lt; 10,
(ADDMONTHS(DATE( YEAR(Today()), 07, 01),3)-1),
(ADDMONTHS(DATE( YEAR(Today()), 10, 01),3)-1)
))))) - IF(
MONTH(Today()) &lt; 4,
DATE( YEAR(Today()), 01, 01),
IF(
MONTH(Today()) &lt; 7,
DATE( YEAR(Today()), 04, 01),
IF(
MONTH(Today()) &lt; 10,
DATE( YEAR(Today()), 07, 01),
DATE( YEAR(Today()), 10, 01)
)))+1))*(IF(
MONTH(Today()) &lt; 4,
(ADDMONTHS(DATE( YEAR(Today()), 01, 01),3)),
IF(
MONTH(Today()) &lt; 7,
(ADDMONTHS(DATE( YEAR(Today()), 04, 01),3)),
IF(
MONTH(Today()) &lt; 10,
(ADDMONTHS(DATE( YEAR(Today()), 07, 01),3)),
(ADDMONTHS(DATE( YEAR(Today()), 10, 01),3))
)))-Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Incr. Sales Uplift $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>