sfdx-source/force-app/main/default/objects/Lever__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It represents the category of the Lever.</description>
    <formula>TEXT(Solution__r.Category__c)</formula>
    <inlineHelpText>Indicates the Category of the Solution.</inlineHelpText>
    <label>Category</label>
    <type>Text</type>
</CustomField>