sfdx-source/force-app/main/default/objects/Lever__c/fields/Cloned_From_Lever_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Lever_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15227: It stores the Lever Id from which the Lever is cloned.</description>
    <label>Cloned From Lever Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>