sfdx-source/force-app/main/default/objects/Lever__c/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It indicates the confidence level of Lever.</description>
    <inlineHelpText>Indicates the confidence level of Implementing this Lever.</inlineHelpText>
    <label>Confidence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Certain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>