sfdx-source/force-app/main/default/objects/Lever__c/fields/Created_by_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Role__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It indicates the Created by Role of Lever.</description>
    <label>Created by Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>