sfdx-source/force-app/main/default/objects/Lever__c/fields/Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>Interest_Level__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It indicates interest level of Lever.</description>
    <inlineHelpText>Indicates the Mx interest level in implementing this Lever.</inlineHelpText>
    <label>Interest Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To Be Evaluated</fullName>
                <default>true</default>
                <label>To Be Evaluated</label>
            </value>
            <value>
                <fullName>Not Interested At All</fullName>
            </value>
            <value>
                <fullName>Somewhat Disinterested</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat Interested</fullName>
            </value>
            <value>
                <fullName>Very Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>