sfdx-source/force-app/main/default/objects/Lever__c/fields/Lever_Points__c.field-meta.xml
<CustomField>
    <fullName>Lever_Points__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16469: It stores the Lever Points.</description>
    <label>VSP Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>