sfdx-source/force-app/main/default/objects/Lever__c/fields/Metric__c.field-meta.xml
<CustomField>
    <fullName>Metric__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It indicates the solution Metric.</description>
    <formula>TEXT(Solution__r.Metric__c)</formula>
    <inlineHelpText>Indicates the capital Metric influenced by the Solution.</inlineHelpText>
    <label>Metric</label>
    <type>Text</type>
</CustomField>