sfdx-source/force-app/main/default/objects/Lever__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-21815: It is used to store all applicable Store IDs for the inflation lever as comma-separated values.</description>
    <inlineHelpText>For Inflation Lever, please enter all applicable Store IDs as comma separated values here</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>