sfdx-source/force-app/main/default/objects/Lever__c/fields/Pipeline_Stage__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Stage__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-18711: It is used to mirror Opportunity Stage on associated Lever.</description>
    <label>Pipeline Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stalled</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Pitching</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>