sfdx-source/force-app/main/default/objects/Lever__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15224 : It represents the points of the related solution record.</description>
    <formula>Solution__r.Points__c</formula>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>