sfdx-source/force-app/main/default/objects/Lever__c/fields/Predicted_Incremental_Sales__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Incremental_Sales__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15224 : It represents the Predicted Incremental Sales of the Lever.</description>
    <label>Predicted Incremental Sales Uplift $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>