sfdx-source/force-app/main/default/objects/Lever__c/fields/Rank__c.field-meta.xml
<CustomField>
    <fullName>Rank__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-16469: It stores the rank of a Lever.</description>
    <label>Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>