sfdx-source/force-app/main/default/objects/Lever__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
     <fullName>Rejection_Reason__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It indicates to rejection the Solution.</description>
    <inlineHelpText>Indicates why the Merchant rejected the Solution, if applicable.</inlineHelpText>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Better Offering from Competitor</fullName>
            </value>
            <value>
                <fullName>DD Operational Concerns</fullName>
            </value>
            <value>
                <fullName>Lack of Integration</fullName>
            </value>
            <value>
                <fullName>Mx Operational Concerns</fullName>
            </value>
            <value>
                <fullName>Negative Previous Experience</fullName>
            </value>
            <value>
                <fullName>Not Bought into Value Prop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product Price Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>