sfdx-source/force-app/main/default/objects/Lever__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-15226: It is used to store the associated Campaign Product.</description>
    <label>Solution</label>
    <referenceTo>Campaign_Product__c</referenceTo>
    <relationshipLabel>Levers</relationshipLabel>
    <relationshipName>Levers</relationshipName>
    <type>Lookup</type>
</CustomField>