sfdx-source/force-app/main/default/objects/Lever__c/fields/Solution_Name__c.field-meta.xml
<CustomField>
    <fullName>Solution_Name__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15224: It represents the Solution Name.</description>
    <formula>Solution__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Name</label>
    <type>Text</type>
</CustomField>