sfdx-source/force-app/main/default/objects/Lever__c/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It is used to represent solution Type.</description>
    <formula>TEXT(Solution__r.Type__c)</formula>
    <label>Solution Type</label>
    <type>Text</type>
</CustomField>