sfdx-source/force-app/main/default/objects/Lever__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15226: It represents status of the Lever.</description>
    <inlineHelpText>Indicates the status of this Lever.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected by Merchant</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>